--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PickMeLater</title>
     <style>
-      body {
+      body,
+      div,
+      button,
+      input {
         margin: 0;
+        transition: background-color 0.2s ease, color 0.2s ease,
+          border-color 0.2s ease, fill 0.2s ease;
       }
     </style>
   </head>
